--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,6 +50,9 @@ add_custom_command(TARGET liquid-server POST_BUILD
                    COMMAND ${CMAKE_COMMAND} -E copy_directory
                        ${LIQUID_IOT_SERVER_SOURCE_DIR}/lib $<TARGET_FILE_DIR:liquid-server>/lib)
 add_custom_command(TARGET liquid-server POST_BUILD
+                   COMMAND ${CMAKE_COMMAND} -E copy_directory
+                       ${LIQUID_IOT_SERVER_SOURCE_DIR}/http-files $<TARGET_FILE_DIR:liquid-server>/http-files)
+add_custom_command(TARGET liquid-server POST_BUILD
                    COMMAND ${CMAKE_COMMAND} -E copy
                        ${LIQUID_IOT_SERVER_SOURCE_DIR}/*.js $<TARGET_FILE_DIR:liquid-server>)
 add_custom_command(TARGET liquid-server POST_BUILD
