Fully separated different request types in the REST api. Added PUT request. Made possible to pause eventloop. Changed every lock() to try_lock() to improve program stability.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -13,7 +13,7 @@ add_library (JSApp applications_manager.cpp application.cpp)
 add_library (Globals globals.c)
 
 # making libraries accessable
-target_link_libraries(Main DukTape DukTapeExtra JSApp NodeJS Globals Http)
+target_link_libraries(Main DukTape DukTapeExtra JSApp NodeJS Globals Http archive)
 target_link_libraries(JSApp EventLoop NodeJS)
 target_include_directories (Main PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
