--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,6 +2,7 @@
 add_subdirectory (eventloop)
 add_subdirectory (nodejs)
 add_subdirectory (http)
+add_subdirectory (logs)
 
 # cpp flags
 set ( CMAKE_CXX_FLAGS "-Wall -Wextra -lm -std=c++11")
@@ -14,7 +15,7 @@ add_library (Globals globals.c)
 
 # making libraries accessable
 target_link_libraries(Main DukTape DukTapeExtra JSApp NodeJS Globals Http archive)
-target_link_libraries(JSApp EventLoop NodeJS)
+target_link_libraries(JSApp EventLoop NodeJS Logs)
 target_include_directories (Main PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
 
