--- a/src/http/CMakeLists.txt
+++ b/src/http/CMakeLists.txt
@@ -2,7 +2,7 @@
 set ( CMAKE_CXX_FLAGS "-Wall -Wextra -lm -std=c++11")
 
 # adding library
-add_library (Http http_request.cpp get_request.cpp post_request.cpp delete_request.cpp put_request.cpp)
+add_library (Http http_request.cpp get_request.cpp post_request.cpp delete_request.cpp put_request.cpp app_request.cpp app_response.cpp)
 
 # linking libraries
 target_link_libraries(Http JSApp websockets)
