--- a/src/eventloop/CMakeLists.txt
+++ b/src/eventloop/CMakeLists.txt
@@ -5,7 +5,7 @@ set ( CMAKE_CXX_FLAGS "-Wall -Wextra -lm -std=c++11")
 add_library (EventLoop custom_eventloop.cpp)
 
 # linking libraries
-target_link_libraries(EventLoop DukTape DukTapeExtra)
+target_link_libraries(EventLoop DukTape DukTapeExtra JSApp Globals)
 
 # making library accessable
 target_include_directories (EventLoop PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
