--- a/src/nodejs/CMakeLists.txt
+++ b/src/nodejs/CMakeLists.txt
@@ -4,6 +4,6 @@ set ( CMAKE_CXX_FLAGS "-Wall -Wextra -lm -std=c++11")
 add_library (NodeJS node_module_search.cpp)
 
 # making library accessable
-target_link_libraries(NodeJS Main)
+target_link_libraries(NodeJS Utility)
 target_include_directories (NodeJS PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
