Client now checks if the device is already on the manager server and sends device info based on that.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,7 +12,7 @@ set ( CMAKE_C_FLAGS "-Wall -Wextra -lm -std=c99")
 add_library (Utility file_ops.cpp util.cpp)
 add_library (JSApp applications_manager.cpp application.cpp)
 add_library (HttpServer http_server.cpp)
-add_library (Globals globals.c)
+add_library (Globals globals.cpp)
 add_library (Device device.cpp)
 
 # linking necessary dependencies
@@ -20,6 +20,7 @@ target_link_libraries(Utility DukTape archive)
 target_link_libraries(JSApp DukTape DukTapeExtra Http EventLoop NodeJS Logs)
 target_link_libraries(HttpServer JSApp Http websockets)
 target_link_libraries(Device DukTape Utility HttpClient)
+target_link_libraries(Globals Device)
 
 # making libraries accessable
 target_include_directories (Utility PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
