Improved config reading and saving on device. App is no longer registered multiple times on RR server. Some excess prints have been removed.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -20,7 +20,7 @@ add_library (Constant constant.cpp)
 target_link_libraries(Utility DukTape Constant archive)
 target_link_libraries(JSApp DukTape DukTapeExtra Http EventLoop NodeJS Logs Device Utility)
 target_link_libraries(HttpServer JSApp Http websockets)
-target_link_libraries(Device DukTape Utility HttpClient)
+target_link_libraries(Device DukTape Constant Utility HttpClient)
 target_link_libraries(Globals Device)
 
 # making libraries accessable
