--- a/src/http/CMakeLists.txt
+++ b/src/http/CMakeLists.txt
@@ -6,7 +6,7 @@ add_library (Http http_request.cpp get_request.cpp post_request.cpp delete_reque
 add_library (HttpClient http_client.cpp client_request_config.cpp)
 
 # linking libraries
-target_link_libraries(Http JSApp Utility websockets)
+target_link_libraries(Http Constant JSApp Utility websockets)
 target_link_libraries(HttpClient DukTape Globals websockets)
 
 # making library accessable
