--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,6 +3,7 @@ add_subdirectory (eventloop)
 add_subdirectory (nodejs)
 add_subdirectory (http)
 add_subdirectory (logs)
+add_subdirectory (duktape)
 
 # cpp flags
 set ( CMAKE_CXX_FLAGS "-Wall -Wextra -lm -std=c++11")
@@ -18,7 +19,7 @@ add_library (Constant constant.cpp)
 
 # linking necessary dependencies
 target_link_libraries(Utility DukTape Constant archive)
-target_link_libraries(JSApp DukTape DukTapeExtra Constant Http EventLoop NodeJS Logs Device Utility)
+target_link_libraries(JSApp DukTape DukTapeExtra ModDukTape Constant Http EventLoop NodeJS Logs Device Utility)
 target_link_libraries(HttpServer Constant Utility JSApp Http websockets)
 target_link_libraries(Device DukTape Constant Utility HttpClient)
 target_link_libraries(Globals Device)
@@ -30,4 +31,3 @@ target_include_directories (JSApp PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 target_include_directories (HttpServer PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 target_include_directories (Globals PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 target_include_directories (Device PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
-
