Some prerelease stuff to make Debug and Release flags work properly (or atleast to what is expected to be done).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,13 @@ install(DIRECTORY DESTINATION ${LIQUID_IOT_SERVER_BINARY_DIR}/tmp)
 #install(DIRECTORY DESTINATION ${LIQUID_IOT_SERVER_BINARY_DIR}/lib)
 
 ## BUILD ##
+# cpp flags
+set ( CMAKE_C_FLAGS "-Wall -Wextra -lm -std=c99" )
+set ( CMAKE_CXX_FLAGS "-Wall -Wextra -lm -pthread -std=c++11 -lstdc++" )
+set ( CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -DDEBUG_PRINT" )
+set ( CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DDEBUG_PRINT" )
+set ( CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -O3" )
+set ( CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3" )
 
 # Adding source directory
 add_subdirectory (src)
@@ -31,18 +38,15 @@ target_include_directories(DukTapeExtra PUBLIC ${DUKTAPE_MODULE_NODE} ${DUKTAPE_
 
 # Setting up some compiler stuff
 
-set ( CMAKE_C_FLAGS "-Wall -Wextra -lm -std=c99")
-set ( CMAKE_CXX_FLAGS "-Wall -Wextra -lm -pthread -std=c++11 -lstdc++")
-
 add_executable (liquid-server src/main.cpp)
 
 target_link_libraries (liquid-server LINK_PUBLIC HttpServer JSApp Device)
 
 # Some post build file moving stuff to help debugging and stuff
-add_custom_command(TARGET liquid-server POST_BUILD 
+add_custom_command(TARGET liquid-server POST_BUILD
                    COMMAND ${CMAKE_COMMAND} -E make_directory
                        $<TARGET_FILE_DIR:liquid-server>/applications)
-add_custom_command(TARGET liquid-server POST_BUILD 
+add_custom_command(TARGET liquid-server POST_BUILD
                    COMMAND ${CMAKE_COMMAND} -E make_directory
                        $<TARGET_FILE_DIR:liquid-server>/tmp)
 add_custom_command(TARGET liquid-server POST_BUILD
