First 0.1.0 release attempt.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,12 @@
 cmake_minimum_required (VERSION 3.0.2)
 project (LIQUID_IOT_SERVER)
 
+set(CMAKE_PROJECT_NAME "liquidiot-duktape-server")
+
+SET(MAJOR_VERSION "0")
+SET(MINOR_VERSION "1")
+SET(PATCH_VERSION "0")
+
 ## BUILD ##
 # cpp flags
 set ( CMAKE_C_FLAGS "-Wall -Wextra -lm -std=c99" )
@@ -89,3 +95,24 @@ install(CODE "execute_process( \
     ${CMAKE_INSTALL_PREFIX}/${link}   \
     )"
 )
+
+## cpack stuff
+
+SET(CPACK_SET_DESTDIR "on")
+SET(CPACK_PACKAGING_INSTALL_PREFIX "/tmp")
+SET(CPACK_GENERATOR "DEB")
+
+SET(CPACK_PACKAGE_CONTACT "oiva.moisio@student.tut.fi")
+SET(CPACK_PACKAGE_DESCRIPTION "Lightweight liquidiot runtime.")
+SET(CPACK_PACKAGE_VERSION_MAJOR "${MAJOR_VERSION}")
+SET(CPACK_PACKAGE_VERSION_MINOR "${MINOR_VERSION}")
+SET(CPACK_PACKAGE_VERSION_PATCH "${PATCH_VERSION}")
+SET(CPACK_PACKAGE_FILE_NAME "${CMAKE_PROJECT_NAME}_${MAJOR_VERSION}.${MINOR_VERSION}.${CPACK_PACKAGE_VERSION_PATCH}")
+SET(CPACK_SOURCE_PACKAGE_FILE_NAME "${CMAKE_PROJECT_NAME}_${MAJOR_VERSION}.${MINOR_VERSION}.${CPACK_PACKAGE_VERSION_PATCH}")
+
+# SET(CPACK_DEBIAN_PACKAGE_DEPENDS "libwebsockets , libarchive ")
+
+SET(CPACK_DEBIAN_ARCHITECTURE ${CMAKE_SYSTEM_PROCESSOR})
+
+SET(CPACK_COMPONENTS_ALL Libraries ApplicationData)
+INCLUDE(CPack)
